@@ -20,7 +20,6 @@ import org.jdom.JDOMException;
 import org.jetbrains.annotations.NotNull;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -149,7 +148,7 @@ public class InspectionResultExportTest extends LightJava9ModulesCodeInsightFixt
     catch (IOException | JDOMException e) {
       String content = null;
       try {
-        content = new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
+        content = Files.readString(file);
       }
       catch (IOException ignored) {}
       throw new AssertionError("cannot parse: " + content, e);
