@@ -1,13 +1,17 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.idea;
 
+import com.intellij.ide.BootstrapBundle;
 import com.intellij.ide.BootstrapClassLoaderUtil;
 import com.intellij.ide.WindowsCommandLineProcessor;
 import com.intellij.ide.startup.StartupActionScriptManager;
 import com.intellij.openapi.application.JetBrainsProtocolHandler;
 import com.intellij.openapi.application.PathManager;
-import com.intellij.util.ArrayUtilRt;
+import com.intellij.openapi.util.NlsSafe;
+import com.intellij.util.lang.PathClassLoader;
+import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.TestOnly;
 
 import javax.swing.*;
 import java.awt.*;
@@ -15,10 +19,11 @@ import java.io.IOException;
 import java.io.PrintStream;
 import java.io.PrintWriter;
 import java.io.StringWriter;
-import java.lang.reflect.Method;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.MethodType;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Properties;
@@ -32,8 +37,8 @@ public final class Main {
   public static final int INSTANCE_CHECK_FAILED = 6;
   public static final int LICENSE_ERROR = 7;
   public static final int PLUGIN_ERROR = 8;
-  public static final int OUT_OF_MEMORY = 9;
-  @SuppressWarnings("unused") public static final int UNSUPPORTED_JAVA_VERSION = 10;  // left for compatibility/reserved for future use
+  // reserved (doesn't seem to ever be used): public static final int OUT_OF_MEMORY = 9;
+  // reserved (permanently if launchers will perform the check): public static final int UNSUPPORTED_JAVA_VERSION = 10;
   public static final int PRIVACY_POLICY_REJECTION = 11;
   public static final int INSTALLATION_CORRUPTED = 12;
   public static final int ACTIVATE_WRONG_TOKEN_CODE = 13;
@@ -43,12 +48,13 @@ public final class Main {
 
   public static final String FORCE_PLUGIN_UPDATES = "idea.force.plugin.updates";
 
+  private static final String MAIN_RUNNER_CLASS_NAME = "com.intellij.ide.plugins.MainRunner";
   private static final String AWT_HEADLESS = "java.awt.headless";
   private static final String PLATFORM_PREFIX_PROPERTY = "idea.platform.prefix";
-  private static final String[] NO_ARGS = ArrayUtilRt.EMPTY_STRING_ARRAY;
-  private static final List<String> HEADLESS_COMMANDS = Arrays.asList(
-    "ant", "duplocate", "dump-shared-index", "traverseUI", "buildAppcodeCache", "format", "keymap", "update", "inspections", "intentions");
-  private static final List<String> GUI_COMMANDS = Arrays.asList("diff", "merge");
+  private static final List<String> HEADLESS_COMMANDS = List.of(
+    "ant", "duplocate", "dump-shared-index", "traverseUI", "buildAppcodeCache", "format", "keymap", "update", "inspections", "intentions",
+    "rdserver-headless", "thinClient-headless");
+  private static final List<String> GUI_COMMANDS = List.of("diff", "merge");
 
   private static boolean isHeadless;
   private static boolean isCommandLine;
@@ -58,15 +64,18 @@ public final class Main {
   private Main() { }
 
   public static void main(String[] args) {
-    LinkedHashMap<String, Long> startupTimings = new LinkedHashMap<>();
+    LinkedHashMap<String, Long> startupTimings = new LinkedHashMap<>(6);
     startupTimings.put("startup begin", System.nanoTime());
+
     if (args.length == 1 && "%f".equals(args[0])) {
-      args = NO_ARGS;
+      //noinspection SSBasedInspection
+      args = new String[0];
     }
 
     if (args.length == 1 && args[0].startsWith(JetBrainsProtocolHandler.PROTOCOL)) {
       JetBrainsProtocolHandler.processJetBrainsLauncherParameters(args[0]);
-      args = NO_ARGS;
+      //noinspection SSBasedInspection
+      args = new String[0];
     }
 
     setFlags(args);
@@ -79,48 +88,52 @@ public final class Main {
       bootstrap(args, startupTimings);
     }
     catch (Throwable t) {
-      showMessage("Start Failed", t);
+      showMessage(BootstrapBundle.message("bootstrap.error.title.start.failed"), t);
       System.exit(STARTUP_EXCEPTION);
     }
   }
 
-  private static void bootstrap(String[] args, LinkedHashMap<String, Long> startupTimings) throws Exception {
+  private static void bootstrap(String[] args, LinkedHashMap<String, Long> startupTimings) throws Throwable {
     startupTimings.put("properties loading", System.nanoTime());
     PathManager.loadProperties();
 
+    startupTimings.put("plugin updates install", System.nanoTime());
     // this check must be performed before system directories are locked
-    String configPath = PathManager.getConfigPath();
-    boolean configImportNeeded = !isHeadless() && !Files.exists(Paths.get(configPath));
-    if (!configImportNeeded) {
-      installPluginUpdates();
+    if (!isCommandLine || Boolean.getBoolean(FORCE_PLUGIN_UPDATES)) {
+      boolean configImportNeeded = !isHeadless() && !Files.exists(Path.of(PathManager.getConfigPath()));
+      if (!configImportNeeded) {
+        installPluginUpdates();
+      }
     }
 
     startupTimings.put("classloader init", System.nanoTime());
-    ClassLoader newClassLoader = BootstrapClassLoaderUtil.initClassLoader();
+    PathClassLoader newClassLoader = BootstrapClassLoaderUtil.initClassLoader();
     Thread.currentThread().setContextClassLoader(newClassLoader);
 
     startupTimings.put("MainRunner search", System.nanoTime());
-    Class<?> klass = Class.forName("com.intellij.ide.plugins.MainRunner", true, newClassLoader);
-    WindowsCommandLineProcessor.ourMainRunnerClass = klass;
-    Method startMethod = klass.getMethod("start", String.class, String[].class, LinkedHashMap.class);
-    startMethod.setAccessible(true);
-    startMethod.invoke(null, Main.class.getName() + "Impl", args, startupTimings);
+    Class<?> mainClass = newClassLoader.loadClassInsideSelf(MAIN_RUNNER_CLASS_NAME, true);
+    if (mainClass == null) {
+      throw new ClassNotFoundException(MAIN_RUNNER_CLASS_NAME);
+    }
+
+    WindowsCommandLineProcessor.ourMainRunnerClass = mainClass;
+    MethodHandles.lookup()
+      .findStatic(mainClass, "start", MethodType.methodType(void.class, String.class, String[].class, LinkedHashMap.class))
+      .invokeExact(Main.class.getName() + "Impl", args, startupTimings);
   }
 
+  @SuppressWarnings("HardCodedStringLiteral")
   private static void installPluginUpdates() {
-    if (!isCommandLine() || Boolean.getBoolean(FORCE_PLUGIN_UPDATES)) {
-      try {
-        StartupActionScriptManager.executeActionScript();
-      }
-      catch (IOException e) {
-        String message =
-          "The IDE failed to install some plugins.\n\n" +
-          "Most probably, this happened because of a change in a serialization format.\n" +
-          "Please try again, and if the problem persists, please report it\n" +
-          "to http://jb.gg/ide/critical-startup-errors" +
-          "\n\nThe cause: " + e.getMessage();
-        showMessage("Plugin Installation Error", message, false);
-      }
+    try {
+      StartupActionScriptManager.executeActionScript();
+    }
+    catch (IOException e) {
+      showMessage("Plugin Installation Error",
+                  "The IDE failed to install some plugins.\n\n" +
+                  "Most probably, this happened because of a change in a serialization format.\n" +
+                  "Please try again, and if the problem persists, please report it\n" +
+                  "to https://jb.gg/ide/critical-startup-errors\n\n" +
+                  "The cause: " + e, false);
     }
   }
 
@@ -142,15 +155,32 @@ public final class Main {
     if (isHeadless) {
       System.setProperty(AWT_HEADLESS, Boolean.TRUE.toString());
     }
+    isLightEdit = "LightEdit".equals(System.getProperty(PLATFORM_PREFIX_PROPERTY)) || !isCommandLine && isFileAfterOptions(args);
+  }
 
-    boolean isFirstArgRegularFile;
-    try {
-      isFirstArgRegularFile = args.length > 0 && Files.isRegularFile(Paths.get(args[0]));
-    } catch (Throwable t) {
-      isFirstArgRegularFile = false;
+  private static boolean isFileAfterOptions(String @NotNull [] args) {
+    for (String arg : args) {
+      if (!arg.startsWith("-")) { // If not an option
+        try {
+          Path path = Paths.get(arg);
+          return Files.isRegularFile(path) || !Files.exists(path);
+        }
+        catch (Throwable t) {
+          return false;
+        }
+      }
+      else if (arg.equals("-l") || arg.equals("--line") || arg.equals("-c") || arg.equals("--column")) { // NON-NLS
+        return true;
+      }
     }
+    return false;
+  }
 
-    isLightEdit = "LightEdit".equals(System.getProperty(PLATFORM_PREFIX_PROPERTY)) || isFirstArgRegularFile;
+  @TestOnly
+  public static void setHeadlessInTestMode(boolean headless) {
+    isHeadless = headless;
+    isCommandLine = true;
+    isLightEdit = false;
   }
 
   public static boolean isHeadless(String @NotNull [] args) {
@@ -163,44 +193,39 @@ public final class Main {
     }
 
     String firstArg = args[0];
-    return HEADLESS_COMMANDS.contains(firstArg) || firstArg.length() < 20 && firstArg.endsWith("inspect");
+    return HEADLESS_COMMANDS.contains(firstArg) || firstArg.length() < 20 && firstArg.endsWith("inspect"); //NON-NLS
   }
 
   private static boolean checkGraphics() {
     if (GraphicsEnvironment.isHeadless()) {
-      showMessage("Startup Error", "Unable to detect graphics environment", true);
+      showMessage(BootstrapBundle.message("bootstrap.error.title.startup.error"),
+                  BootstrapBundle.message("bootstrap.error.message.no.graphics.environment"),
+                  true);
       return false;
     }
-
     return true;
   }
 
-  public static void showMessage(String title, Throwable t) {
-    StringWriter message = new StringWriter();
+  public static void showMessage(@Nls(capitalization = Nls.Capitalization.Title) String title, Throwable t) {
+    @Nls(capitalization = Nls.Capitalization.Sentence) StringWriter message = new StringWriter();
 
     AWTError awtError = findGraphicsError(t);
     if (awtError != null) {
-      message.append("Failed to initialize graphics environment\n\n");
+      message.append(BootstrapBundle.message("bootstrap.error.message.failed.to.initialize.graphics.environment"));
+      message.append("\n\n");
       hasGraphics = false;
       t = awtError;
     }
     else {
-      message.append("Internal error. Please refer to ");
-      boolean studio = "AndroidStudio".equalsIgnoreCase(System.getProperty(PLATFORM_PREFIX_PROPERTY));
-      message.append(studio ? "https://code.google.com/p/android/issues" : "http://jb.gg/ide/critical-startup-errors");
+      message.append(BootstrapBundle.message("bootstrap.error.message.internal.error.please.refer.to.0", supportUrl()));
       message.append("\n\n");
     }
 
     t.printStackTrace(new PrintWriter(message));
 
-    Properties sp = System.getProperties();
-    String jre = sp.getProperty("java.runtime.version", sp.getProperty("java.version", "(unknown)"));
-    String vendor = sp.getProperty("java.vendor", "(unknown vendor)");
-    String arch = sp.getProperty("os.arch", "(unknown arch)");
-    String home = sp.getProperty("java.home", "(unknown java.home)");
-    message.append("\n-----\nJRE ").append(jre).append(' ').append(arch).append(" by ").append(vendor).append('\n').append(home);
+    message.append("\n-----\n").append(BootstrapBundle.message("bootstrap.error.message.jre.details", jreDetails()));
 
-    showMessage(title, message.toString(), true);
+    showMessage(title, message.toString(), true); //NON-NLS
   }
 
   private static AWTError findGraphicsError(Throwable t) {
@@ -213,40 +238,61 @@ public final class Main {
     return null;
   }
 
+  private static @NlsSafe String jreDetails() {
+    Properties sp = System.getProperties();
+    String jre = sp.getProperty("java.runtime.version", sp.getProperty("java.version", "(unknown)"));
+    String vendor = sp.getProperty("java.vendor", "(unknown vendor)");
+    String arch = sp.getProperty("os.arch", "(unknown arch)");
+    String home = sp.getProperty("java.home", "(unknown java.home)");
+    return jre + ' ' + arch + " (" + vendor + ")\n" + home;
+  }
+
+  private static @NlsSafe String supportUrl() {
+    boolean studio = "AndroidStudio".equalsIgnoreCase(System.getProperty(PLATFORM_PREFIX_PROPERTY));
+    return studio ? "https://code.google.com/p/android/issues" : "https://jb.gg/ide/critical-startup-errors";
+  }
+
   @SuppressWarnings({"UndesirableClassUsage", "UseOfSystemOutOrSystemErr"})
-  public static void showMessage(String title, String message, boolean error) {
+  public static void showMessage(@Nls(capitalization = Nls.Capitalization.Title) String title,
+                                 @Nls(capitalization = Nls.Capitalization.Sentence) String message,
+                                 boolean error) {
     PrintStream stream = error ? System.err : System.out;
-    stream.println("\n" + title + ": " + message);
+    stream.println();
+    stream.println(title);
+    stream.println(message);
 
     boolean headless = !hasGraphics || isCommandLine() || GraphicsEnvironment.isHeadless();
-    if (!headless) {
-      try { UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName()); }
-      catch (Throwable ignore) { }
+    if (headless) return;
 
-      try {
-        JTextPane textPane = new JTextPane();
-        textPane.setEditable(false);
-        textPane.setText(message.replaceAll("\t", "    "));
-        textPane.setBackground(UIManager.getColor("Panel.background"));
-        textPane.setCaretPosition(0);
-        JScrollPane scrollPane = new JScrollPane(
-          textPane, ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEEDED, ScrollPaneConstants.HORIZONTAL_SCROLLBAR_AS_NEEDED);
-        scrollPane.setBorder(null);
+    try {
+      UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName());
+    }
+    catch (Throwable ignore) { }
 
-        int maxHeight = Toolkit.getDefaultToolkit().getScreenSize().height / 2;
-        int maxWidth = Toolkit.getDefaultToolkit().getScreenSize().width / 2;
-        Dimension component = scrollPane.getPreferredSize();
-        if (component.height > maxHeight || component.width > maxWidth) {
-          scrollPane.setPreferredSize(new Dimension(Math.min(maxWidth, component.width), Math.min(maxHeight, component.height)));
-        }
+    try {
+      JTextPane textPane = new JTextPane();
+      textPane.setEditable(false);
+      textPane.setText(message.replaceAll("\t", "    "));
+      textPane.setBackground(UIManager.getColor("Panel.background"));
+      textPane.setCaretPosition(0);
+      JScrollPane scrollPane = new JScrollPane(textPane,
+                                               ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEEDED,
+                                               ScrollPaneConstants.HORIZONTAL_SCROLLBAR_AS_NEEDED);
+      scrollPane.setBorder(null);
 
-        int type = error ? JOptionPane.ERROR_MESSAGE : JOptionPane.WARNING_MESSAGE;
-        JOptionPane.showMessageDialog(JOptionPane.getRootFrame(), scrollPane, title, type);
+      int maxHeight = Toolkit.getDefaultToolkit().getScreenSize().height / 2;
+      int maxWidth = Toolkit.getDefaultToolkit().getScreenSize().width / 2;
+      Dimension component = scrollPane.getPreferredSize();
+      if (component.height > maxHeight || component.width > maxWidth) {
+        scrollPane.setPreferredSize(new Dimension(Math.min(maxWidth, component.width), Math.min(maxHeight, component.height)));
       }
-      catch (Throwable t) {
-        stream.println("\nAlso, a UI exception occurred on an attempt to show the above message:");
-        t.printStackTrace(stream);
-      }
+
+      int type = error ? JOptionPane.ERROR_MESSAGE : JOptionPane.WARNING_MESSAGE;
+      JOptionPane.showMessageDialog(JOptionPane.getRootFrame(), scrollPane, title, type);
+    }
+    catch (Throwable t) {
+      stream.println("\nAlso, a UI exception occurred on an attempt to show the above message");
+      t.printStackTrace(stream);
     }
   }
 }
