@@ -1,4 +1,4 @@
-// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.intellij.build.impl
 
 import groovy.transform.CompileStatic
@@ -6,26 +6,29 @@ import org.jetbrains.intellij.build.JvmArchitecture
 import org.jetbrains.intellij.build.ProductProperties
 
 @CompileStatic
-class VmOptionsGenerator {
+final class VmOptionsGenerator {
   static final List<String> COMMON_VM_OPTIONS =
     [
-      '-XX:+UseConcMarkSweepGC', '-XX:SoftRefLRUPolicyMSPerMB=50',
-      '-ea',
+      '-XX:+UseG1GC',
+      '-XX:SoftRefLRUPolicyMSPerMB=50',
       '-XX:CICompilerCount=2',
-      '-Dsun.io.useCanonPrefixCache=false',
-      '-Djdk.http.auth.tunneling.disabledSchemes=""',
       '-XX:+HeapDumpOnOutOfMemoryError',
       '-XX:-OmitStackTraceInFastThrow',
+      '-ea',
+      '-Dsun.io.useCanonCaches=false',
+      '-Djdk.http.auth.tunneling.disabledSchemes=""',
       '-Djdk.attach.allowAttachSelf=true',
-      '-Dkotlinx.coroutines.debug=off',
       '-Djdk.module.illegalAccess.silent=true',
+      '-Dkotlinx.coroutines.debug=off',
     ]
+
+  static final String defaultCodeCacheSetting = '-XX:ReservedCodeCacheSize=512m'
 
   static List<String> computeVmOptions(JvmArchitecture arch, boolean isEAP, ProductProperties productProperties) {
     List<String> commonVmOptions
     if (isEAP) {
-      //must be consistent with com.intellij.openapi.application.ConfigImportHelper.updateVMOptions
-      commonVmOptions = COMMON_VM_OPTIONS + ["-XX:MaxJavaStackTraceDepth=10000"]
+      // must be consistent with `com.intellij.openapi.application.ConfigImportHelper#updateVMOptions`
+      commonVmOptions = ["-XX:MaxJavaStackTraceDepth=10000"] + COMMON_VM_OPTIONS
     }
     else {
       commonVmOptions = COMMON_VM_OPTIONS
@@ -35,11 +38,14 @@ class VmOptionsGenerator {
 
   private static List<String> vmMemoryOptions(JvmArchitecture arch, ProductProperties productProperties) {
     switch (arch) {
-      // NOTE: when changing, please review usages of ProductProperties.getCustomJvmMemoryOptionsX64 and synchronize if necessary  
-      case JvmArchitecture.x32: return ['-server', '-Xms128m', '-Xmx512m', '-XX:ReservedCodeCacheSize=240m']
-      case JvmArchitecture.x64: return productProperties.customJvmMemoryOptionsX64?.split(' ')?.toList() ?: ['-Xms128m', '-Xmx750m', '-XX:ReservedCodeCacheSize=240m']
+      case JvmArchitecture.x32:
+        return ['-Xms128m', '-Xmx512m', '-XX:ReservedCodeCacheSize=384m']
+      // when changing, please review usages of `ProductProperties#getCustomJvmMemoryOptionsX64` and synchronize if necessary
+      case JvmArchitecture.x64:
+      case JvmArchitecture.aarch64:
+        return productProperties.customJvmMemoryOptionsX64?.split(' ')?.toList() ?: ['-Xms128m', '-Xmx750m', defaultCodeCacheSetting]
+      default:
+        throw new AssertionError(arch)
     }
-    throw new AssertionError(arch)
   }
 }
-
