@@ -11,39 +11,24 @@ import com.intellij.openapi.project.Project;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.openapi.vfs.newvfs.NewVirtualFile;
 import com.intellij.openapi.vfs.newvfs.RefreshQueue;
-import com.intellij.openapi.vfs.newvfs.VfsPresentationUtil;
 import com.intellij.openapi.wm.StatusBar;
 import com.intellij.openapi.wm.WindowManager;
-import com.intellij.util.containers.JBIterable;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class SynchronizeCurrentFileAction extends AnAction implements DumbAware {
   @Override
   public void update(@NotNull AnActionEvent e) {
-    List<VirtualFile> files = getFiles(e).take(2).toList();
-    Project project = e.getProject();
-    if (project == null || files.isEmpty()) {
-      e.getPresentation().setEnabledAndVisible(false);
-    }
-    else {
-      e.getPresentation().setEnabledAndVisible(true);
-    }
-  }
-
-  @NotNull
-  private static String getMessage(@NotNull Project project, @NotNull List<? extends VirtualFile> files) {
-    VirtualFile single = files.size() == 1 ? files.get(0) : null;
-    return single != null ?
-           IdeBundle.message("action.synchronize.file", VfsPresentationUtil.getPresentableNameForAction(project, single)) :
-           IdeBundle.message("action.synchronize.selected.files");
+    e.getPresentation().setEnabledAndVisible(e.getProject() != null && localFiles(e).findAny().isPresent());
   }
 
   @Override
   public void actionPerformed(@NotNull AnActionEvent e) {
     Project project = getEventProject(e);
-    List<VirtualFile> files = getFiles(e).toList();
+    List<VirtualFile> files = localFiles(e).collect(Collectors.toList());
     if (project == null || files.isEmpty()) return;
 
     for (VirtualFile file : files) {
@@ -57,17 +42,16 @@ public class SynchronizeCurrentFileAction extends AnAction implements DumbAware 
     RefreshQueue.getInstance().refresh(true, true, () -> postRefresh(project, files), files);
   }
 
-  private static void postRefresh(Project project, List<? extends VirtualFile> files) {
+  private static void postRefresh(Project project, List<VirtualFile> files) {
     VcsFacade.getInstance().markFilesDirty(project, files);
     StatusBar statusBar = WindowManager.getInstance().getStatusBar(project);
     if (statusBar != null) {
-      statusBar.setInfo(IdeBundle.message("action.sync.completed.successfully", getMessage(project, files)));
+      statusBar.setInfo(IdeBundle.message("action.sync.completed.successfully"));
     }
   }
 
-  @NotNull
-  private static JBIterable<VirtualFile> getFiles(@NotNull AnActionEvent e) {
-    return JBIterable.of(e.getData(CommonDataKeys.VIRTUAL_FILE_ARRAY))
-      .filter(o -> o.isInLocalFileSystem());
+  private static Stream<VirtualFile> localFiles(AnActionEvent e) {
+    VirtualFile[] files = e.getData(CommonDataKeys.VIRTUAL_FILE_ARRAY);
+    return files != null ? Stream.of(files).filter(f -> f.isValid() && f.isInLocalFileSystem()) : Stream.empty();
   }
 }
