@@ -1,5 +1,8 @@
-// Copyright 2000-2018 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.ui.wizard;
+
+import com.intellij.ide.IdeBundle;
+import com.intellij.openapi.util.NlsActions;
 
 import javax.swing.*;
 import java.awt.event.ActionEvent;
@@ -8,24 +11,23 @@ public abstract class WizardAction extends AbstractAction {
 
   protected WizardModel myModel;
 
-  public WizardAction(String name, WizardModel model) {
+  public WizardAction(@NlsActions.ActionText String name, WizardModel model) {
     super(name);
     myModel = model;
   }
 
   protected void setMnemonic(char value) {
-    putValue(Action.MNEMONIC_KEY, new Integer(value));
+    putValue(Action.MNEMONIC_KEY, Integer.valueOf(value));
   }
 
-  public final void setName(String name) {
+  public final void setName(@NlsActions.ActionText String name) {
     putValue(Action.NAME, name);
   }
 
   public static class Next extends WizardAction {
 
     public Next(WizardModel model) {
-      super("Next >", model);
-      setMnemonic('N');
+      super(IdeBundle.message("button.wizard.next"), model);
     }
 
     @Override
@@ -37,8 +39,7 @@ public abstract class WizardAction extends AbstractAction {
   public static class Previous extends WizardAction {
 
     public Previous(WizardModel model) {
-      super("< Previous", model);
-      setMnemonic('P');
+      super(IdeBundle.message("button.wizard.previous"), model);
     }
 
     @Override
@@ -50,8 +51,7 @@ public abstract class WizardAction extends AbstractAction {
   public static class Finish extends WizardAction {
 
     public Finish(WizardModel model) {
-      super("Finish", model);
-      setMnemonic('F');
+      super(IdeBundle.message("button.finish"), model);
     }
 
     @Override
@@ -63,8 +63,7 @@ public abstract class WizardAction extends AbstractAction {
   public static class Cancel extends WizardAction {
 
     public Cancel(WizardModel model) {
-      super("Cancel", model);
-      setMnemonic('C');
+      super(IdeBundle.message("button.cancel"), model);
     }
 
     @Override
