@@ -4,13 +4,12 @@ package com.intellij.util.ui;
 import com.intellij.diagnostic.Activity;
 import com.intellij.diagnostic.StartUpMeasurer;
 import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.util.SystemInfo;
+import com.intellij.openapi.util.SystemInfoRt;
 import com.intellij.ui.JreHiDpiUtil;
 import com.intellij.ui.scale.JBUIScale;
 import com.intellij.ui.scale.ScaleContext;
 import com.intellij.util.Function;
 import com.intellij.util.JBHiDPIScaledImage;
-import com.intellij.util.SystemProperties;
 import com.intellij.util.ui.accessibility.ScreenReader;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
@@ -40,7 +39,7 @@ public final class StartupUiUtil {
       return ourSystemLaFClassName;
     }
 
-    if (SystemInfo.isLinux) {
+    if (SystemInfoRt.isLinux) {
       // Normally, GTK LaF is considered "system" when:
       // 1) Gnome session is run
       // 2) gtk lib is available
@@ -51,7 +50,7 @@ public final class StartupUiUtil {
         @SuppressWarnings("SpellCheckingInspection")
         String name = "com.sun.java.swing.plaf.gtk.GTKLookAndFeel";
         Class<?> cls = Class.forName(name);
-        LookAndFeel laf = (LookAndFeel)cls.newInstance();
+        LookAndFeel laf = (LookAndFeel)cls.getDeclaredConstructor().newInstance();
         // if gtk lib is available
         if (laf.isSupportedLookAndFeel()) {
           ourSystemLaFClassName = name;
@@ -111,7 +110,7 @@ public final class StartupUiUtil {
 
   @ApiStatus.Internal
   public static int doGetLcdContrastValueForSplash(boolean isUnderDarcula) {
-    if (SystemInfo.isMacIntel64) {
+    if (SystemInfoRt.isMac) {
       return isUnderDarcula ? 140 : 230;
     }
     else {
@@ -144,7 +143,7 @@ public final class StartupUiUtil {
   private static void blockATKWrapper() {
     // registry must be not used here, because this method called before application loading
     //noinspection SpellCheckingInspection
-    if (!SystemInfo.isLinux || !SystemProperties.getBooleanProperty("linux.jdk.accessibility.atkwrapper.block", true)) {
+    if (!SystemInfoRt.isLinux || !Boolean.parseBoolean(System.getProperty("linux.jdk.accessibility.atkwrapper.block", "true"))) {
       return;
     }
 
@@ -200,19 +199,6 @@ public final class StartupUiUtil {
    */
   public static void drawImage(@NotNull Graphics g, @NotNull Image image, int x, int y, @Nullable ImageObserver observer) {
     drawImage(g, image, new Rectangle(x, y, -1, -1), null, null, observer);
-  }
-
-  /**
-   * A hidpi-aware wrapper over {@link Graphics#drawImage(Image, int, int, int, int, ImageObserver)}.
-   * <p>
-   * @deprecated Note, the method interprets [x,y,width,height] as the destination and source bounds which doesn't conform
-   * to the {@link Graphics#drawImage(Image, int, int, int, int, ImageObserver)} method contract. This works
-   * just fine for the general-purpose one-to-one drawing, however when the dst and src bounds need to be specific,
-   * use {@link #drawImage(Graphics, Image, Rectangle, Rectangle, BufferedImageOp, ImageObserver)}.
-   */
-  @Deprecated
-  public static void drawImage(@NotNull Graphics g, @NotNull Image image, int x, int y, int width, int height, @Nullable ImageObserver observer) {
-    drawImage(g, image, x, y, width, height, null, observer);
   }
 
   static void drawImage(@NotNull Graphics g, @NotNull Image image, int x, int y, int width, int height, @Nullable BufferedImageOp op, ImageObserver observer) {
