@@ -1,29 +1,17 @@
-/*
- * Copyright 2000-2014 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.tasks.generic;
 
+import com.intellij.openapi.util.NlsContexts;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.util.containers.ContainerUtil;
-import java.util.HashMap;
 import org.apache.commons.httpclient.HttpMethod;
 import org.apache.commons.httpclient.NameValuePair;
 import org.apache.commons.httpclient.methods.PostMethod;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Collection;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.regex.Matcher;
@@ -32,7 +20,7 @@ import java.util.regex.Pattern;
 /**
  * @author Mikhail Golubev
  */
-public class GenericRepositoryUtil {
+public final class GenericRepositoryUtil {
   private static final Pattern PLACEHOLDER_PATTERN = Pattern.compile("\\{(\\w[-\\w]*)\\}");
 
   public static HttpMethod getPostMethodFromURL(final String requestUrl) {
@@ -61,7 +49,7 @@ public class GenericRepositoryUtil {
     for (TemplateVariable v : variables) {
       lookup.put(v.getName(), v.getValue());
     }
-    StringBuffer sb = new StringBuffer();
+    StringBuilder sb = new StringBuilder();
     Matcher m = PLACEHOLDER_PATTERN.matcher(s);
     while (m.find()) {
       String name = m.group(1);
@@ -71,7 +59,7 @@ public class GenericRepositoryUtil {
       }
       // TODO: add proper escape|unescape property to template variables
       if (escape && !name.equals(GenericRepository.SERVER_URL)) {
-        m.appendReplacement(sb, URLEncoder.encode(replacement, "utf-8"));
+        m.appendReplacement(sb, URLEncoder.encode(replacement, StandardCharsets.UTF_8));
       }
       else {
         m.appendReplacement(sb, replacement);
@@ -88,7 +76,7 @@ public class GenericRepositoryUtil {
     return ContainerUtil.map2List(variables, variable -> String.format("{%s}", variable.getName()));
   }
 
-  public static String prettifyVariableName(String variableName) {
+  public static @NlsContexts.Label String prettifyVariableName(@NlsContexts.Label String variableName) {
     String prettyName = variableName.replace('_', ' ');
     return StringUtil.capitalizeWords(prettyName, true);
   }
